# ChessEngine

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  chess
src/: engine_session.cpp  engine_session.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  types.h  utils.h
tests/: perft_tests.cpp  perft_tests.h
web/: app.py
web/static/: game.html  game.js  index.html  styles.css  tests.html
